--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "jsontoexcel",
+  "name": "j2e",
   "version": "1.0.0",
   "description": "CLI tool for converting json to excel and vice versa ",
   "main": "bin/index.js",
   "bin": {
-    "jsontoexcel": "./bin/index.js"
+    "j2e": "./bin/index.js"
   },
   "scripts": {
     "test": "jest"
