--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   },
   "homepage": "https://github.com/mshahulpm/j2e#readme",
   "dependencies": {
+    "chalk": "4.1.2",
     "commander": "^9.5.0",
     "exceljs": "^4.3.0",
-    "figlet": "^1.5.2"
+    "figlet": "^1.5.2",
+    "inquirer": "^8.0.0",
+    "ora": "5.4.1"
   }
 }
