--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "j2e",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "CLI tool for converting json to excel and vice versa ",
   "main": "bin/index.js",
   "bin": {
     "j2e": "./bin/index.js"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "publish:npm": "npm publish --access public",
+    "start": "node bin/index.js"
   },
   "repository": {
     "type": "git",
